# Intro-24bit-32bit-float-PCM

./: README.md
ShowFloatRanges/: ShowFloatRanges.vcxproj  ShowFloatRanges.vcxproj.filters
ShowFloatRanges/example_output/: ShowFloatRanges.csv  ShowFloatRanges.txt
audio_util/: README.md  pyproject.toml
audio_util/src/ricochet_tech/audio/: audio_util.py  float32_helpers.py
cpp/ShowFloatRanges/: ShowFloatRanges.cpp  ShowFloatRanges.sln  ShowFloatRanges.vcxproj  ShowFloatRanges.vcxproj.filters
cpp/include/: fltu.h
include/: fltu.h
src/ricochet_tech/audio/: audio_util.py  float32_helpers.py  range_ex1.py
walkthroughs/: 01_create_square_wave_24bit_pcm_simple.py  02_create_square_wave_24bit_pcm_simple.py  03_create_square_wave_24bit_pcm_simple.py  04_create_square_wave_32bit_float_pcm_simple.py  05_create_square_wave_32bit_float_pcm_simple.py  06_create_square_wave_32bit_float_pcm_simple.py  07_create_sine_wave_24bit_pcm.py  08_create_square_wave_24bit_pcm.py  09_create_10step_increasing_test_tone_24bit_pcm.py
